force-app/main/default/objects/Homeowner_Property__c/Homeowner_Property__c.object-meta.xml
<CustomObject>
    <label>Homeowner Property</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homeowner Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>