force-app/main/default/objects/Homeowner_Property__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>