force-app/main/default/objects/Homeowner_Property__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Direct homeowner contact tied to the ODL homeowner property. Used for voucher identity, portal status, customer communication, and property ownership proof.</description>
    <label>Homeowner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Homeowner Properties</relationshipLabel>
    <relationshipName>HomeownerProperties</relationshipName>
    <type>Lookup</type>
</CustomField>