force-app/main/default/objects/Homeowner_Property__c/fields/Customer_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Customer_Readiness__c</fullName>
    <label>Customer Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Needs Prep</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>