force-app/main/default/objects/Homeowner_Property__c/fields/Gate_Access__c.field-meta.xml
<CustomField>
    <fullName>Gate_Access__c</fullName>
    <label>Gate Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>