force-app/main/default/objects/Homeowner_Property__c/fields/Homeowner_Account__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homeowner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Homeowner Properties</relationshipLabel>
    <relationshipName>HomeownerProperties</relationshipName>
    <type>Lookup</type>
</CustomField>