force-app/main/default/objects/Homeowner_Property__c/fields/Irrigation__c.field-meta.xml
<CustomField>
    <fullName>Irrigation__c</fullName>
    <label>Irrigation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>