force-app/main/default/objects/Homeowner_Property__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Homeowner Properties</relationshipLabel>
    <relationshipName>HomeownerProperties</relationshipName>
    <type>Lookup</type>
</CustomField>