force-app/main/default/objects/Homeowner_Property__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <label>Lot Size (sqft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>