force-app/main/default/objects/Homeowner_Property__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <label>Property City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>