force-app/main/default/objects/Homeowner_Property__c/fields/Property_Notes__c.field-meta.xml
<CustomField>
    <fullName>Property_Notes__c</fullName>
    <label>Property Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>