force-app/main/default/objects/Homeowner_Property__c/fields/Property_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Postal_Code__c</fullName>
    <label>Property Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>