force-app/main/default/objects/Homeowner_Property__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>Property State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>