force-app/main/default/objects/Homeowner_Property__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <label>Property Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>