force-app/main/default/objects/Homeowner_Property__c/fields/Utility_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Utility_Review_Status__c</fullName>
    <label>Utility Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Review Needed</fullName>
            </value>
            <value>
                <fullName>Likely Required</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>